--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "devDependencies": {
         "@types/react": "^18.0.17",
         "@types/react-dom": "^18.0.6",
+        "@types/react-router-dom": "^5.3.3",
         "axios": "^0.27",
         "laravel-mix": "^6.0.49",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.54.4",
         "sass-loader": "^12.6.0",
