--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "laravel-mix": "^6.0.49",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-query": "^3.39.2",
         "react-router-dom": "^6.3.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.54.4",
