--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react-dom": "^18.2.0",
         "react-query": "^3.39.2",
         "react-router-dom": "^6.3.0",
+        "react-toastify": "^9.0.8",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.54.4",
         "sass-loader": "^12.6.0",
